<resources>
    <string name="app_name">梦之蓝AQI</string>
    <string name="str_city_list">显示城市list</string>
    <string name="str_aqi_num">40</string>
    <string name="str_api_level_name">轻度污染</string>
    <string name="str_api_update_time">%1$s 首要污染物: %2$s</string>
    <string name="str_temperature_wind">温度: %1$d ℃ 风速: %2$d m/s 风向: %3$s</string>
    <string name="str_api_forest">空气质量预报</string>
    <string name="str_weekday">星期四 1</string>
    <string name="str_temperature_range">0~5℃</string>
    <string name="str_weather_data">气象数据</string>
    <string name="str_current_weather_data" formatted="true">%1$s 当前气象状况( 数据测量时间 %2$s )</string>
    <string name="str_temperature_num">%d ℃</string>
    <!--% 符号特殊，%%转化为%，在java的string format中-->
    <string name="str_humidity">湿度: %d %%</string>
    <string name="str_air_pressure">空气压力: %d 毫帕</string>
    <string name="str_api_quality_forest">空气质量预报</string>
    <string name="str_nearby_city">附近的城市AQI站点</string>
    <string name="str_aqi_quality_index">空气质量指数</string>
    <string name="str_aqi_level_color">空气质量指数级别(状况)及表示颜色</string>
    <string name="str_aqi_affect">对健康影响情况</string>
    <string name="str_aqi_suggest">建议采取的措施</string>
    <!--unicode 编码，代替 - 符号 -->
    <string name="str_good_range">0 &#8211; 50</string>
    <string name="str_aqi_level_one">一级(优)</string>
    <string name="str_aqi_good_desc">空气质量令人满意，基本无空气污染</string>
    <string name="str_aqi_good_suggest">各类人群可正常活动</string>
    <string name="str_moderate_range">51 &#8211; 100</string>
    <string name="str_aqi_level_two">二级(良)</string>
    <string name="str_aqi_moderate_desc">空气质量可接受，但某些污染物可能对极少数异常敏感人群有较弱影响</string>
    <string name="str_aqi_moderate_suggest">极少数异常敏感人群应减少户外活动</string>
    <string name="str_light_unhealthy_range">101 &#8211; 150</string>
    <string name="str_aqi_level_three">三级(轻度污染)</string>
    <string name="str_light_unhealthy_desc">易感人群症状有轻度加剧，健康人群出现刺激症状</string>
    <string name="str_light_unhealthy_suggest">儿童、老年人及呼吸系统疾病患者应减少长时间、高强度的户外锻炼</string>
    <string name="str_unhealthy_range">151 &#8211; 200</string>
    <string name="str_aqi_level_four">四级(中度污染)</string>
    <string name="str_unhealthy_desc">进一步加剧易感人群症状，可能对健康人群心脏、呼吸系统有影响</string>
    <string name="str_unhealthy_suggest">儿童、老年人及呼吸系统疾病患者应减少长时间、高强度的户外锻炼，一般人群适量减少户外运动</string>
    <string name="str_very_unhealthy_range">201 &#8211; 300</string>
    <string name="str_aqi_level_five">五级(重度污染)</string>
    <string name="str_very_unhealthy_desc">心脏病和肺病患者症状显著加剧，运动耐受力降低，健康人群普遍出现症状</string>
    <string name="str_very_unhealthy_suggest">儿童、老年人及心脏病、肺病患者应停留在室内，停止户外运动，一般人群减少户外运动</string>
    <string name="str_hazardous_range">300+</string>
    <string name="str_aqi_level_six">六级(严重污染)</string>
    <string name="str_hazardous_desc">健康人群运动耐受力降低，有明显强烈症状，提前出现某些疾病</string>
    <string name="str_hazardous_suggest">儿童、老年人和病人应停留在室内，避免体力消耗，一般人群避免户外活动</string>
    <string name="str_shnu">上海师范大学(徐汇校区)</string>
    <string name="str_time_range">星期四 8 &#8211; 18:00</string>
    <string name="str_aqi_level_good">优</string>
    <string name="str_aqi_level_moderate">良</string>
    <string name="str_aqi_level_light_unhealthy">轻度污染</string>
    <string name="str_aqi_level_unhealthy">中度污染</string>
    <string name="str_aqi_level_very_unhealthy">重度污染</string>
    <string name="str_aqi_level_hazardous">严重污染</string>
    <string name="str_aqi_should_not_lessthan_zero">I think aqi can\'t less than zero !</string>
    <string name="str_sunday">星期日</string>
    <string name="str_monday">星期一</string>
    <string name="str_tuesday">星期二</string>
    <string name="str_wednesday">星期三</string>
    <string name="str_thursday">星期四</string>
    <string name="str_friday">星期五</string>
    <string name="str_saturday">星期六</string>
    <string name="str_add_aqi_city">添加AQI城市</string>
    <string name="str_time">10:31</string>
    <string name="str_beijing">北京</string>
    <string name="str_0">0℃</string>
    <string name="str_setting">设置</string>
    <string name="str_about">关于</string>
    <string name="str_share">分享</string>
    <string name="str_map">地图</string>
    <string name="str_location">定位</string>
    <string name="str_share_title">"分享AQI应用给朋友"</string>
    <string name="str_url_app_download">关注蓝天，关爱健康，欢迎安装AQI应用，点击 https://raw.githubusercontent.com/zhiwei1990/BlueDreamAQI/master/release/aqi.apk 下载</string>
    <string name="str_avatar_desc">avatar</string>
    <string name="str_about_title">关于AQI</string>
    <string name="str_developer_introduction">人生就像一场旅行，不必在乎目的地，在乎的是，沿途的风景以及看风景的心情。志威梦，用心灵感悟人生......</string>
    <string name="str_copy_right">志威梦科技工作室\nCopyRight © 2018 zhiwei.in</string>
    <string name="str_version">当前版本: %s</string>
    <string name="str_developer_name">志威</string>
    <string name="str_profession">喜爱折腾和探险的技术小白</string>
    <string name="str_report_bug">报告 Bug</string>
    <string name="str_bug_report_content">报告Bug或提交新的功能需求、改建意见和建议</string>
    <string name="str_github">Github</string>
    <string name="str_fork">Fork参与项目，或Star关注项目</string>
    <string name="str_follow_wechat">关注微信公众号</string>
    <string name="str_wechat_content">微信搜索“志威梦”，或者截图扫描二维码关注</string>
    <string name="str_donate">捐赠支持</string>
    <string name="str_donate_content">期待您的慷慨支持，志威会更加努力的用心做好产品</string>
    <string name="str_qrcode_wechat">扫描关注\"志威梦\"</string>
    <string name="str_url_bug_report">"https://github.com/zhiwei1990/BlueDreamAQI/issues"</string>
    <string name="str_url_github">"https://github.com/zhiwei1990/BlueDreamAQI"</string>
    <string name="str_try_again">重新试试</string>
    <string name="str_tips_no_browser">请确定手机是否安装浏览器</string>
    <string name="str_latest_version">已经是最新版本啦</string>
    <string name="str_find_new">"发现新版本"</string>
    <string name="str_get_new">"是否下载更新?"</string>
    <string name="str_cancel">"取消"</string>
    <string name="str_ok">"确定"</string>
    <string name="str_service_tips">使用协议</string>
    <string name="str_content_tips">1、本软件数据源相关AQI网站，数据仅供参考，本开发者不对数据权威性进行校验;\n
        2、App旨在开发技术研究学习，同时希望能给予用户相关便利;\n
        3、AQI关注空气质量、关爱生命健康，使用本软件的任何后果用户自担;\n
        4、点击确认则表示同意协议，并责任自担，否则请取消，并卸载，谢谢！</string>
	<string name="str_version_splash">梦之蓝AQI  v%s</string>
	<string name="str_long_click_tips">长按背景,可查看aqi等级详情</string>
	<string name="str_aqi_widget">175</string>
	<string name="configure">Configure</string>
	<string name="add_widget">Add widget</string>
	<string name="str_text_widget">上海 09:00</string>
	<string name="str_search_city">搜索城市</string>
	<string name="str_input_city">请输入城市名称或拼音</string>
</resources>
