<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp">

    <TableRow android:gravity="center_horizontal">

        <TextView
            style="@style/aqi_level_chart"
            android:layout_weight="1"
            android:text="@string/str_aqi_quality_index"
            android:textStyle="bold" />

        <TextView
            style="@style/aqi_level_chart"
            android:layout_weight="1"
            android:text="@string/str_aqi_level_color"
            android:textStyle="bold" />

        <TextView
            style="@style/aqi_level_chart"
            android:layout_weight="2"
            android:text="@string/str_aqi_affect"
            android:textStyle="bold" />

        <TextView
            style="@style/aqi_level_chart"
            android:layout_weight="3"
            android:text="@string/str_aqi_suggest"
            android:textStyle="bold" />
    </TableRow>

    <TableRow>

        <TextView
            style="@style/aqi_level_chart"
            android:layout_weight="1"
            android:background="@color/colorAQIGood"
            android:text="@string/str_good_range" />

        <TextView
            style="@style/aqi_level_chart"
            android:layout_weight="1"
            android:background="@color/colorAQIGood"
            android:text="@string/str_aqi_level_one" />

        <TextView
            style="@style/aqi_level_chart"
            android:layout_weight="2"
            android:background="@color/colorAQIGood"
            android:text="@string/str_aqi_good_desc" />

        <TextView
            style="@style/aqi_level_chart"
            android:layout_weight="3"
            android:background="@color/colorAQIGood"
            android:text="@string/str_aqi_good_suggest" />
    </TableRow>

    <TableRow>

        <TextView
            style="@style/aqi_level_chart"
            android:layout_weight="1"
            android:background="@color/colorAQIModerate"
            android:text="@string/str_moderate_range" />

        <TextView
            style="@style/aqi_level_chart"
            android:layout_weight="1"
            android:background="@color/colorAQIModerate"
            android:text="@string/str_aqi_level_two" />

        <TextView
            style="@style/aqi_level_chart"
            android:layout_weight="2"
            android:background="@color/colorAQIModerate"
            android:text="@string/str_aqi_moderate_desc" />

        <TextView
            style="@style/aqi_level_chart"
            android:layout_weight="3"
            android:background="@color/colorAQIModerate"
            android:text="@string/str_aqi_moderate_suggest" />
    </TableRow>

    <TableRow>

        <TextView
            style="@style/aqi_level_chart"
            android:layout_weight="1"
            android:background="@color/colorAQIUSG"
            android:text="@string/str_light_unhealthy_range" />

        <TextView
            style="@style/aqi_level_chart"
            android:layout_weight="1"
            android:background="@color/colorAQIUSG"
            android:text="@string/str_aqi_level_three" />

        <TextView
            style="@style/aqi_level_chart"
            android:layout_weight="2"
            android:background="@color/colorAQIUSG"
            android:text="@string/str_light_unhealthy_desc" />

        <TextView
            style="@style/aqi_level_chart"
            android:layout_weight="3"
            android:background="@color/colorAQIUSG"
            android:text="@string/str_light_unhealthy_suggest" />
    </TableRow>

    <TableRow>

        <TextView
            style="@style/aqi_level_chart"
            android:layout_weight="1"
            android:background="@color/colorAQIUnhealthy"
            android:text="@string/str_unhealthy_range" />

        <TextView
            style="@style/aqi_level_chart"
            android:layout_weight="1"
            android:background="@color/colorAQIUnhealthy"
            android:text="@string/str_aqi_level_four" />

        <TextView
            style="@style/aqi_level_chart"
            android:layout_weight="2"
            android:background="@color/colorAQIUnhealthy"
            android:text="@string/str_unhealthy_desc" />

        <TextView
            style="@style/aqi_level_chart"
            android:layout_weight="3"
            android:background="@color/colorAQIUnhealthy"
            android:text="@string/str_unhealthy_suggest" />
    </TableRow>

    <TableRow>

        <TextView
            style="@style/aqi_level_chart"
            android:layout_weight="1"
            android:background="@color/colorAQIVeryUnhealthy"
            android:text="@string/str_very_unhealthy_range" />

        <TextView
            style="@style/aqi_level_chart"
            android:layout_weight="1"
            android:background="@color/colorAQIVeryUnhealthy"
            android:text="@string/str_aqi_level_five" />

        <TextView
            style="@style/aqi_level_chart"
            android:layout_weight="2"
            android:background="@color/colorAQIVeryUnhealthy"
            android:text="@string/str_very_unhealthy_desc" />

        <TextView
            style="@style/aqi_level_chart"
            android:layout_weight="3"
            android:background="@color/colorAQIVeryUnhealthy"
            android:text="@string/str_very_unhealthy_suggest" />
    </TableRow>

    <TableRow>

        <TextView
            style="@style/aqi_level_chart"
            android:layout_weight="1"
            android:background="@color/colorAQIHazardous"
            android:text="@string/str_hazardous_range" />

        <TextView
            style="@style/aqi_level_chart"
            android:layout_weight="1"
            android:background="@color/colorAQIHazardous"
            android:text="@string/str_aqi_level_six" />

        <TextView
            style="@style/aqi_level_chart"
            android:layout_weight="2"
            android:background="@color/colorAQIHazardous"
            android:text="@string/str_hazardous_desc" />

        <TextView
            style="@style/aqi_level_chart"
            android:layout_weight="3"
            android:background="@color/colorAQIHazardous"
            android:text="@string/str_hazardous_suggest" />
    </TableRow>
</TableLayout>