<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
	<item
			android:id="@+id/location_menu"
			android:icon="@drawable/location"
			android:title="@string/str_location"
			app:showAsAction="ifRoom"/>
	<item
			android:id="@+id/map_menu"
			android:icon="@drawable/earth"
			android:title="@string/str_map"
			app:showAsAction="ifRoom"/>

	<item app:showAsAction="ifRoom" android:title="">
		<menu>
			<item
					android:id="@+id/search_menu"
					android:icon="@drawable/search"
					android:title="@string/str_search_city"
					tools:ignore="AppCompatResource"
					app:showAsAction="ifRoom"/>
			<item
					android:id="@+id/share_menu"
					android:icon="@drawable/share"
					tools:ignore="AppCompatResource"
					android:title="@string/str_share"
					app:showAsAction="ifRoom"/>
			<!--<item-->
			<!--android:id="@+id/setting_menu"-->
			<!--android:icon="@drawable/setting"-->
			<!--android:title="@string/str_setting" />-->
			<item
					android:id="@+id/feedback_menu"
					android:icon="@drawable/feedback"
					app:showAsAction="ifRoom"

					android:title="@string/str_feedback"/>
			<item
					android:id="@+id/about_menu"
					android:icon="@drawable/about"
					app:showAsAction="ifRoom"
					android:title="@string/str_about"/>
		</menu>
	</item>

</menu>