<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_content_about"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="10dp"
    android:background="@drawable/layer_cardview"
    android:orientation="vertical"
    app:layout_constraintTop_toBottomOf="@+id/cl_info_about"
    tools:showIn="@layout/activity_about">

	<androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_bug_report_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/item_ripple"
        android:padding="5dp">

        <ImageView
            android:id="@+id/iv_bug_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:src="@drawable/ic_bug"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title_bug_report_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/str_report_bug"
            app:layout_constraintLeft_toRightOf="@+id/iv_bug_about" />

        <TextView
            android:id="@+id/tv_content_bug_report_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/str_bug_report_content"
            android:textColor="@color/colorGray"
            android:textSize="12sp"
            app:layout_constraintLeft_toRightOf="@+id/iv_bug_about"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_bug_report_about" />
	</androidx.constraintlayout.widget.ConstraintLayout>

	<androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_github_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_ripple"
        android:padding="5dp">

        <ImageView
            android:id="@+id/iv_fork_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:src="@drawable/ic_github"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title_fork_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/str_github"
            app:layout_constraintLeft_toRightOf="@+id/iv_fork_about" />

        <TextView
            android:id="@+id/tv_content_fork_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/str_fork"
            android:textColor="@color/colorGray"
            android:textSize="12sp"
            app:layout_constraintLeft_toRightOf="@+id/iv_fork_about"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_fork_about" />
	</androidx.constraintlayout.widget.ConstraintLayout>

	<androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_wechat_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_ripple"
        android:padding="5dp">

        <ImageView
            android:id="@+id/iv_wechat_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:src="@drawable/ic_wechat"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title_wechat_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/str_follow_wechat"
            app:layout_constraintLeft_toRightOf="@+id/iv_wechat_about" />

        <TextView
            android:id="@+id/tv_content_wechat_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/str_wechat_content"
            android:textColor="@color/colorGray"
            android:textSize="12sp"
            app:layout_constraintLeft_toRightOf="@+id/iv_wechat_about"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_wechat_about" />
	</androidx.constraintlayout.widget.ConstraintLayout>

	<androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_donate_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/item_ripple"
        android:padding="5dp">

        <ImageView
            android:id="@+id/iv_donate_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:src="@drawable/ic_donate"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title_donate_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/str_donate"
            app:layout_constraintLeft_toRightOf="@+id/iv_donate_about" />

        <TextView
            android:id="@+id/tv_content_donate_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/str_donate_content"
            android:textColor="@color/colorGray"
            android:textSize="12sp"
            app:layout_constraintLeft_toRightOf="@+id/iv_donate_about"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_donate_about" />
	</androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>