<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_header_api_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorAQIGood"
    android:fitsSystemWindows="true"
    android:paddingTop="12dp">

    <TextView
        android:id="@+id/tv_api_num_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/str_aqi_num"
        android:textColor="@color/colorWhite"
        android:textSize="50sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_api_level_name_header"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/tv_api_level_name_header" />

    <TextView
        android:id="@+id/tv_api_level_name_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/str_api_level_name"
        android:textColor="@color/colorWhite"
        android:textSize="50sp"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintLeft_toRightOf="@+id/tv_api_num_header"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/tv_api_update_time_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/colorWhiteTranslate"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/str_api_update_time"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_api_level_name_header" />
</android.support.constraint.ConstraintLayout>