<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_item_nearby"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/item_ripple"
    android:padding="5dp">
    <!--android:background="@android:color/background_light"-->

    <TextView
        android:id="@+id/tv_aqi_item_nearby"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:background="@color/colorAQIGood"
        android:gravity="center"
        android:minWidth="50dp"
        android:padding="5dp"
        android:text="@string/str_aqi_num"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_monitor_item_nearby"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/str_shnu"
        android:textColor="@color/colorBlack"
        android:textSize="16sp"
        app:layout_constraintLeft_toRightOf="@+id/tv_aqi_item_nearby"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_time_range_item_nearby"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/str_time_range"
        android:textColor="@color/colorGray"
        android:textSize="12sp"
        app:layout_constraintLeft_toRightOf="@+id/tv_aqi_item_nearby"
        app:layout_constraintTop_toBottomOf="@+id/tv_monitor_item_nearby" />
</android.support.constraint.ConstraintLayout>